[#12] FTS-5 based search added on products and categories
